--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,13 +1,11 @@
-# app/Dockerfile
 FROM python:3.10-slim
 
 # Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 # Install dependencies
 RUN apt-get update && apt-get install -y netcat-openbsd gcc postgresql-client
-
 
 # Set work directory
 WORKDIR /usr/src/app
