--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,32 @@
-# docker-compose.yml
 
 
 services:
   web:
-    build: ./app
+    build:
+      context: ./app
+      dockerfile: Dockerfile
+    container_name: django-web
+    command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
+    volumes:
+      - .:/usr/src/app
     ports:
       - "8000:8000"
-    volumes:
-      - ./app:/usr/src/app
+    env_file: .env
+    depends_on:
+      - db
+
+  db:
+    image: postgres:15
+    container_name: postgres-db
+    restart: always
     environment:
-      - DEBUG=1
+      POSTGRES_DB: ${POSTGRES_NAME}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+volumes:
+  pgdata:
