--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build:
@@ -8,7 +6,7 @@ services:
     container_name: django-web
     command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - ./app:/usr/src/app
+      - ./app:/usr/src/app   # mount ./app correctly
     ports:
       - "8000:8000"
     env_file: .env
@@ -17,7 +15,6 @@ services:
 
   db:
     image: postgres:15
-    container_name: postgres-db
     restart: always
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
@@ -25,23 +22,6 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - pgdata:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-
-  jenkins:
-    image: jenkins/jenkins:lts
-    container_name: jenkins
-    restart: unless-stopped
-    privileged: true
-    user: root
-    ports:
-      - "8080:8080"
-      - "50000:50000"
-    volumes:
-      - jenkins_home:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./jenkins:/home/jenkins
 
 volumes:
   pgdata:
-  jenkins_home:
