--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,6 +1,12 @@
 FROM jenkins/jenkins:lts
 
 USER root
+
+# Install Docker CLI
 RUN apt-get update && apt-get install -y docker.io
+
+# Install Docker Compose
+RUN curl -L "https://github.com/docker/compose/releases/download/v2.24.6/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose \
+    && chmod +x /usr/local/bin/docker-compose
 
 USER jenkins
