Initial Pipeline complete: All DevSec tools running

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -8,13 +8,10 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /usr/src/app
 
+# Copy all application code
 COPY . .
 
-# Debug: List what was copied
-RUN echo "=== Contents of /usr/src/app ===" && ls -la /usr/src/app
-RUN echo "=== Looking for manage.py ===" && find /usr/src/app -name "manage.py" -type f
-RUN echo "=== Current working directory ===" && pwd
-
+# Install Python dependencies
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
 ENV PYTHONPATH=/usr/src/app
