--- a/docker-compose.jenkins.yml
+++ b/docker-compose.jenkins.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   jenkins:
     build:
@@ -16,15 +14,43 @@ services:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - ./jenkins:/home/jenkins
-      - .:/var/jenkins_home/workspace/ci-cd-django-pipeline
+      # Mount the host project into Jenkins container workspace:
+      - /home/con-mac/dev/projects/ci-cd-django:/var/jenkins_home/workspace/ci-cd-django-pipeline
+    environment:
+      - JENKINS_ADMIN_ID
+      - JENKINS_ADMIN_PASSWORD
+      - CASC_JENKINS_CONFIG=/var/jenkins_home/casc.yaml
 
   db:
-    ports: []  # Prevent conflict
+    image: postgres:15
+    restart: always
+    environment:
+      POSTGRES_DB: devdb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
   web:
-    volumes:
-      - /var/jenkins_home/workspace/ci-cd-django-pipeline/app:/usr/src/app
-
+    build:
+      context: ./app  # Relative path within Jenkins workspace
+      dockerfile: Dockerfile
+    container_name: django-web
+    command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
+    ports:
+      - "8000:8000"
+    environment:
+      - POSTGRES_DB=devdb
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - DEBUG=True
+      - SECRET_KEY=django-insecure-your-secret-key-here-change-in-production
+      - ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+    depends_on:
+      - db
 
 volumes:
   jenkins_home:
+  pgdata:
