--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,18 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  sonarqube:
+    image: sonarqube:lts
+    container_name: sonarqube
+    ports:
+      - "9000:9000"
+    environment:
+      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+
 volumes:
   pgdata:
+  sonarqube_data:
+  sonarqube_extensions:
