--- a/docker-compose.jenkins.yml
+++ b/docker-compose.jenkins.yml
@@ -51,6 +51,20 @@ services:
     depends_on:
       - db
 
+  sonarqube:
+    image: sonarqube:lts
+    container_name: sonarqube
+    ports:
+      - "9000:9000"
+    environment:
+      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+
+
 volumes:
   jenkins_home:
   pgdata:
+  sonarqube_data:
+  sonarqube_extensions:
